# advent_of_code

./: .bazelrc  MODULE.bazel  README.md
2015/: BUILD.bazel  day1.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day19_alternate.cc  day2.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  day25.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day7alternate.cc  day8.cc  day9.cc
2016/: BUILD.bazel  day1.cc
2024/: BUILD.bazel  day1.cc  day10.cc  day12.cc  day12.txt  day2.cc  day3.cc  day4.cc  day6.cc  day8.cc  farkel.cc
utils/: BUILD.bazel  status_macros.h  utils.cc  utils.h
