cc_binary(
    name = "day1",
    deps = [
        "//utils:utils",
    ],
    srcs = ["day1.cc"],
    data = ["day1.txt"],
)

cc_binary(
    name = "day2",
    deps = [
        "//utils:utils",
    ],
    srcs = ["day2.cc"],
    data = ["day2.txt"],
)

cc_binary(
    name = "day3",
    deps = [
        "@abseil-cpp//absl/container:flat_hash_set",
        "//utils:utils",
    ],
    srcs = ["day3.cc"],
    data = ["day3.txt"],
)

cc_binary(
    name = "day4",
    deps = [
        "@boringssl//:crypto",
        "//utils:utils",
    ],
    srcs = ["day4.cc"],
)

cc_binary(
    name = "day5",
    deps = [
        "//utils:utils",
    ],
    srcs = ["day5.cc"],
    data = ["day5.txt"],
)

cc_binary(
    name = "day6",
    deps = [
        "//utils:utils",
    ],
    srcs = ["day6.cc"],
    data = ["day6.txt"],
)
cc_binary(
    name = "day7",
    deps = [
        "@abseil-cpp//absl/container:flat_hash_map",
        "//utils:utils",
    ],
    srcs = ["day7.cc"],
    data = ["day7.txt"],
)
cc_binary(
    name = "day7alternate",
    deps = [
        "@abseil-cpp//absl/container:flat_hash_map",
        "//utils:utils",
    ],
    srcs = ["day7alternate.cc"],
    data = ["day7alternate.txt"],
)
cc_binary(
    name = "day8",
    deps = [
        "//utils:utils",
    ],
    srcs = ["day8.cc"],
    data = ["day8.txt", "day8test.txt"],
)
cc_binary(
    name = "day9",
    deps = [
        "//utils:utils",
    ],
    srcs = ["day9.cc"],
    data = ["day9.txt"],
)

cc_binary(
    name = "day10",
    srcs = ["day10.cc"],
)

cc_binary(
    name = "day11",
    srcs = ["day11.cc"],
)

cc_binary(
    name = "day12",
    srcs = ["day12.cc"],
    data = ["day12.txt"],
    deps = [
        "//utils:utils",
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "day13",
    deps = [
        "//utils:utils",
    ],
    srcs = ["day13.cc"],
    data = ["day13.txt"],
)
