cc_binary(
    name = "day1",
    srcs = ["day1.cc"],
    data = ["day1.txt"],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day2",
    srcs = ["day2.cc"],
    data = ["day2.txt"],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day3",
    srcs = ["day3.cc"],
    data = ["day3.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/container:flat_hash_set",
    ],
)

cc_binary(
    name = "day4",
    srcs = ["day4.cc"],
    deps = [
        "//utils",
        "@boringssl//:crypto",
    ],
)

cc_binary(
    name = "day5",
    srcs = ["day5.cc"],
    data = ["day5.txt"],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day6",
    srcs = ["day6.cc"],
    data = ["day6.txt"],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day7",
    srcs = ["day7.cc"],
    data = ["day7.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/container:flat_hash_map",
    ],
)

cc_binary(
    name = "day7alternate",
    srcs = ["day7alternate.cc"],
    data = ["day7alternate.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/container:flat_hash_map",
    ],
)

cc_binary(
    name = "day8",
    srcs = ["day8.cc"],
    data = [
        "day8.txt",
        "day8test.txt",
    ],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day9",
    srcs = ["day9.cc"],
    data = ["day9.txt"],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day10",
    srcs = ["day10.cc"],
)

cc_binary(
    name = "day11",
    srcs = ["day11.cc"],
)

cc_binary(
    name = "day12",
    srcs = ["day12.cc"],
    data = ["day12.txt"],
    deps = [
        "//utils",
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "day13",
    srcs = ["day13.cc"],
    data = ["day13.txt"],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day14",
    srcs = ["day14.cc"],
    data = ["day14.txt"],
    deps = [
        "//utils",
        "@fmt",
    ],
)

cc_binary(
    name = "day15",
    srcs = ["day15.cc"],
    data = ["day15.txt"],
    deps = [
        "//utils",
        "@fmt",
    ],
)

cc_binary(
    name = "day16",
    srcs = ["day16.cc"],
    data = ["day16.txt"],
    deps = [
        "//utils",
        "@fmt",
    ],
)

cc_binary(
    name = "day17",
    srcs = ["day17.cc"],
    data = ["day17.txt"],
    deps = [
        "//utils",
        "@fmt",
    ],
)

cc_binary(
    name = "day18",
    srcs = ["day18.cc"],
    data = ["day18.txt"],
    deps = [
        "//utils",
        "@fmt",
    ],
)

cc_binary(
    name = "day19_alternate",
    srcs = ["day19_alternate.cc"],
    data = ["day19_alternate.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/strings:cord",
        "@fmt",
    ],
)

cc_binary(
    name = "day20",
    srcs = ["day20.cc"],
    deps = [
        "//utils",
        "@fmt",
    ],
)

cc_binary(
    name = "day21",
    srcs = ["day21.cc"],
    deps = [
        "//utils",
        "@fmt",
    ],
)

cc_binary(
    name = "day22",
    srcs = ["day22.cc"],
    deps = [
        "//utils",
        "@fmt",
    ],
)

cc_binary(
    name = "day23",
    srcs = ["day23.cc"],
    data = ["day23.txt"],
    deps = [
        "//utils",
        "@fmt",
    ],
)
