cc_binary(
    name = "day1",
    srcs = ["day1.cc"],
    data = ["day1.txt"],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day2",
    srcs = ["day2.cc"],
    data = ["day2.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/log:check",
        "@fmt",
    ],
)

cc_binary(
    name = "day4",
    srcs = ["day4.cc"],
    data = ["day4.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/log:check",
        "@fmt",
    ],
)

cc_binary(
    name = "day6",
    srcs = ["day6.cc"],
    data = ["day6.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/log:check",
        "@fmt",
    ],
)
