cc_binary(
    name = "day1",
    srcs = ["day1.cc"],
    data = ["day1.txt"],
    deps = [
        "//utils",
    ],
)

cc_binary(
    name = "day2",
    srcs = ["day2.cc"],
    data = ["day2.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_binary(
   name = "day3",
    srcs = ["day3.cc"],
    data = ["day3.txt"],
    deps = [
        "//utils", 
    ],
)

cc_binary(
    name = "day4",
    srcs = ["day4.cc"],
    data = ["day4.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_binary(
    name = "day6",
    srcs = ["day6.cc"],
    data = ["day6.txt"],
    deps = [
        "//utils",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/container:flat_hash_map",
    ]
)